# job-bot-agent

./: .gitignore  .opencode-rules  AGENTS.md  README.md  START_HERE.md  aggregator.py  apply.py  aryan-sahu-full-stack-dev-resume.json  config.json  corrections.md  jobbot-assistant.user.js  jobs_found_20260629_2222.json  jobs_to_apply_20260629_2222.txt  pyproject.toml  resume.json  resume.txt  run.py
config/: default.yaml
docs/: DESIGN.md  PROJECT_CONTEXT.md  STYLE.md  TASKS.md
jobbot-extension/: content.js  manifest.json
prompts/: answer_generation.md  job_matching.md  rewrite.md  screener_answers.md
src/: aggregator.py  apply.py  cli.py  config.py  llm.py  models.py  server.py
src/browser/: __init__.py  engine.py
src/config/: __init__.py  loader.py
src/evaluator/: __init__.py  evaluator.py
src/job_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: __init__.py  base.py  engine.py  ollama.py
src/logging/: __init__.py  setup.py
src/models/: __init__.py  application.py  evaluation.py  forms.py  job.py
src/profile/: __init__.py  manager.py  models.py  parser.py
src/prompts/: loader.py
src/scheduler/: __init__.py  scheduler.py
src/screen/: __init__.py  button_finder.py  form_detector.py  form_filler.py  hotkey.py  models.py  parser.py  reader.py  workflow.py
src/sources/: __init__.py  base.py  breezy.py  greenhouse.py  indeed.py  lever.py  linkedin.py  naukri.py  recruitee.py  (+5 more)
tests/: test_answer.py  test_browser.py  test_config.py  test_evaluator.py  test_forms.py  test_llm.py  test_models.py  test_profile.py  test_prompts.py  test_review.py  test_scheduler.py  test_screen_form_detector.py  test_screen_form_filler.py  test_screen_hotkey.py  test_screen_models.py  test_screen_reader.py  test_sources.py  test_storage.py  test_submission.py
(+7 files in other folders)
