[project]
name = "job-bot"
version = "0.3.0"
description = "Job Link Aggregator + Smart Filter — find jobs and apply with AI assistance"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.50",
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.7.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
